--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </main>
 
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/register-sw.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDLLWSUVpq3etT6JVGVem7JxTDa2izcySI&libraries=places&callback=initMap"></script>
 
