feat: Add accesibility features to google map

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" aria-hidden="true">
+      <div id="map" role="application" aria-label="Map with restaurants marked"></div>
     </section>
     <section>
       <div class="filter-options">
