--- a/restaurant.html
+++ b/restaurant.html
@@ -31,8 +31,8 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container"  aria-hidden="true">
+      <div id="map" role="application" aria-label="Map with current restaurants marked"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
