feat: Add skipping map section

--- a/restaurant.html
+++ b/restaurant.html
@@ -28,6 +28,8 @@
   </header>
   <!-- End header -->
 
+  <a class="skip-main" href="#restaurant-container">Skip to main content</a>
+
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
@@ -36,7 +38,7 @@
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <section id="restaurant-container" tabindex="-1">
       <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
