--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     </nav>
   </header>
 
+  <a class="skip-main" href="#skip-target">Skip to main content</a>
+
   <main id="maincontent">
     <section id="map-container" aria-hidden="true">
       <div id="map" role="application" aria-label="Map with restaurants marked"></div>
     </section>
-    <section>
+    <section id="skip-target" tabindex="-1">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select
